# modular-shift-scheduler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIG_REFERENCE.md  EXTENDING.md
examples/minimal/: README.md  generate_config.py
modular_shift_scheduler/: __init__.py  cli.py  config.py  constraints.py  example_data.py  excel_loader.py  objectives.py  solver.py  time_index.py  xlsx_writer.py
src/scheduler/: __init__.py  cli.py  config.py  data_models.py  logging_utils.py  reporting.py  time_index.py  utils.py
src/scheduler/constraints/: __init__.py  base.py  coverage.py  hours.py  rest.py
src/scheduler/io/: excel_loader.py  writers.py
src/scheduler/objective/: __init__.py  base.py  preferences.py
src/scheduler/optimizer/: backend.py  solver.py
tests/: conftest.py  test_constraints.py  test_excel_loader.py  test_objectives.py  test_solver.py  test_time_index.py
