[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler"
version = "0.1.0"
description = "Modular shift scheduling engine"
authors = [{name = "Scheduling Team"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "typer[all]>=0.12",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "ortools>=9.8",
    "rich>=13.7"
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "ruff>=0.4",
    "mypy>=1.9"
]

[project.scripts]
scheduler = "scheduler.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
